--- a/learning_log/learning_logs/templates/learning_logs/index.html
+++ b/learning_log/learning_logs/templates/learning_logs/index.html
@@ -1,6 +1,5 @@
-# showing after which template this file inherits
 {% extends "learning_logs/base.html" %}
 
 {% block content %}
   <p>Learning Log helps in navigating your progress in studying</p>
-{% enblock content %} 
+{% endblock content %} 
