--- a/learning_log/learning_logs/templates/learning_logs/index.html
+++ b/learning_log/learning_logs/templates/learning_logs/index.html
@@ -1,5 +1,7 @@
+<!--infromation that it inherits after template from base.html-->
 {% extends "learning_logs/base.html" %}
 
+<!--this is a block of content-->
 {% block content %}
-  <p>Learning Log helps in navigating your progress in studying</p>
+  <p>Learning Log helps in monitoring your progress in learning new things!</p>
 {% endblock content %} 
