--- a/learning_log/learning_logs/templates/learning_logs/topics.html
+++ b/learning_log/learning_logs/templates/learning_logs/topics.html
@@ -1,15 +1,18 @@
-{% extends 'learning_logs/base.html' %}
+{% extends "learning_logs/base.html" %}
 
 {% block content %}
-
-  <p>Topics</p>
+  <p>
+    Topics
+  </p>
 
   <ul>
+    <!--this is a for loop which iterates through topics-->
     {% for topic in topics %}
-      <li>{{ topic }}</li> 
+      <li>
+        <a href = "{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a>
+      </li>
     {% empty %}
-      <li>Topic hasn't been added yet</li>
+      <li>No topic has been added yet</li>
     {% endfor %}
   </ul>
-
 {% endblock content %}
